HV-1857 Drop Java 8 testing and run sigtest with Java 17